<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:layout_margin="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/breaking_bad_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/breaking_bad_details_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="16sp"/>


            <ImageView
                android:id="@+id/breaking_bad_details_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp" />
<!--info-->
            <TextView
                android:id="@+id/breaking_bad_details_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/property_status"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/breaking_bad_details_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/property_birthday"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/breaking_bad_details_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/property_occupation"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/breaking_bad_details_appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/property_appearance"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/breaking_bad_details_quotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/property_quotes"
                android:textSize="16sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>




</LinearLayout>